[gd_scene load_steps=3 format=3 uid="uid://cdsqmhpe35s24"]

[ext_resource type="Theme" uid="uid://dui8cebqku8x5" path="res://interface/themes/olympic_theme.tres" id="1"]
[ext_resource type="Script" uid="uid://33tg6p3ji4gr" path="res://ui/common_elements/ElementOptionCheckbox.gd" id="3"]

[node name="MarginContainer" type="MarginContainer"]
offset_right = 247.0
offset_bottom = 50.0
custom_minimum_size = Vector2(0, 50)
theme = ExtResource("1")
script = ExtResource("3")

[node name="ElementCheckbox" type="CheckBox" parent="."]
offset_right = 247.0
offset_bottom = 50.0
custom_minimum_size = Vector2(0, 31)

[node name="Tween" type="Tween" parent="ElementCheckbox"]

[connection signal="focus_entered" from="." to="." method="_on_MarginContainer_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_MarginContainer_focus_exited"]
[connection signal="focus_entered" from="ElementCheckbox" to="." method="_on_ElementCheckbox_focus_entered"]
[connection signal="focus_exited" from="ElementCheckbox" to="." method="_on_ElementCheckbox_focus_exited"]
[connection signal="toggled" from="ElementCheckbox" to="." method="_on_ElementCheckbox_toggled"]
